; ModuleID = '/home/carl/AnghaBench/php-src/ext/dba/libflatfile/extr_flatfile.c_flatfile_fetch.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/dba/libflatfile/extr_flatfile.c_flatfile_fetch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_9__ = type { i64, i32*, i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @flatfile_fetch(%struct.TYPE_9__* noalias sret %0, %struct.TYPE_8__* %1, %struct.TYPE_9__* byval(%struct.TYPE_9__) align 8 %2) #0 {
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca [16 x i8], align 16
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %4, align 8
  %6 = bitcast %struct.TYPE_9__* %0 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %6, i8 0, i64 32, i1 false)
  %7 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %8 = call i64 @flatfile_findkey(%struct.TYPE_8__* %7, %struct.TYPE_9__* byval(%struct.TYPE_9__) align 8 %2)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %38

10:                                               ; preds = %3
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 0
  %15 = call i64 @php_stream_gets(i32 %13, i8* %14, i32 16)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %34

17:                                               ; preds = %10
  %18 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 0
  %19 = call i64 @atoi(i8* %18)
  %20 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %0, i32 0, i32 0
  store i64 %19, i64* %20, align 8
  %21 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %0, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = call i32* @safe_emalloc(i64 %22, i32 1, i32 1)
  %24 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %0, i32 0, i32 1
  store i32* %23, i32** %24, align 8
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %0, i32 0, i32 1
  %29 = load i32*, i32** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %0, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = call i64 @php_stream_read(i32 %27, i32* %29, i64 %31)
  %33 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %0, i32 0, i32 0
  store i64 %32, i64* %33, align 8
  br label %37

34:                                               ; preds = %10
  %35 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %0, i32 0, i32 1
  store i32* null, i32** %35, align 8
  %36 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %0, i32 0, i32 0
  store i64 0, i64* %36, align 8
  br label %37

37:                                               ; preds = %34, %17
  br label %38

38:                                               ; preds = %37, %3
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i64 @flatfile_findkey(%struct.TYPE_8__*, %struct.TYPE_9__* byval(%struct.TYPE_9__) align 8) #2

declare dso_local i64 @php_stream_gets(i32, i8*, i32) #2

declare dso_local i64 @atoi(i8*) #2

declare dso_local i32* @safe_emalloc(i64, i32, i32) #2

declare dso_local i64 @php_stream_read(i32, i32*, i64) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
